[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Game_Logic/Destroyable/Destroyable.gd" type="Script" id=1]

[node name="Destroyable" type="Node" groups=[
"Serializable",
]]
script = ExtResource( 1 )

[node name="Regen_Timer" type="Timer" parent="."]

[node name="Regen_Delayed_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Regen_Timer" to="." method="_on_Regen_Timer_timeout"]
[connection signal="timeout" from="Regen_Delayed_Timer" to="." method="_on_Regen_Delayed_Timer_timeout"]
